--- a/desafio-modulo2/desafio2/android.html
+++ b/desafio-modulo2/desafio2/android.html
@@ -87,7 +87,7 @@
     </main>
     <footer>
         <p>
-            Site criado pelo <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">Curso em Vídeo</a>, Gustavo Guanabara.
+            Site criado pelo <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">Curso em Vídeo</a>, Gustavo Guanabara. Executado por Cleiton Luiz.
         </p>
     </footer>
 
