--- a/Aulas modulo3/ex001/fundo004.html
+++ b/Aulas modulo3/ex001/fundo004.html
@@ -9,6 +9,10 @@
     <style>
         body {
             background-image: url("imagens/pattern001.png");
+            background-repeat: no-repeat;
+            height:95vh;
+            border: 5px solid black;
+            background-position: center center;
         }
     </style>
 </head>
