--- a/AulasModulo3/ex001/fundo005.html
+++ b/AulasModulo3/ex001/fundo005.html
@@ -5,10 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste de Imagem de Fundo do Site</title>
+
+    <style>
+        body {
+            height: 100vh;
+            background-color: black;
+            background-image: url("imagens/wallpaper002.jpg");
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+        }
+
+        main {
+            background-color: white;
+            width: 400px;
+            margin: auto;
+            padding: 10px;
+            border: 4px solid red;
+            border-radius: 3px;
+        }
+
+    </style>
 </head>
 <body>
     <main>
-        <h1></h1>
+        <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum dolores iste, sapiente dignissimos reiciendis quo repellat, ex suscipit odit rem eligendi repudiandae incidunt. Voluptatum, praesentium eos alias corrupti voluptate maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum et veniam ullam maiores, exercitationem labore veritatis magnam hic velit fuga laudantium a atque, alias dicta natus? Unde exercitationem iure earum? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut adipisci eius iure tenetur architecto aut hic deserunt quia quaerat! Cupiditate laboriosam laudantium quo asperiores qui esse rerum, sed vitae modi.</p>
     </main>
 </body>
 </html>
