--- a/AulasModulo3/ex001/fundo007.html
+++ b/AulasModulo3/ex001/fundo007.html
@@ -5,9 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alinhamento Vertical</title>
+
+    <style>
+        #conteiner {
+        background-image: url('imagens/target001.png');
+        position: relative;
+        background-size: 100% 100%;
+        background-color: purple;
+        height: 98vh;
+
+        }
+
+        #conteudo {
+        background-image: url('imagens/target001.png');
+        background-color: yellow;
+        background-size: 100% 100%;
+        height: 300px;
+        width: 400px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+
+        transform: translate(-200px, -150px);    
+        }    
+    </style>
+
 </head>
 <body>
-    
+    <section id="conteiner">
+        <article id="conteudo">
+
+        </article>
+    </section>
     
 </body>
 </html>
