--- a/Aulas-modulo3/ex002/index.html
+++ b/Aulas-modulo3/ex002/index.html
@@ -13,6 +13,7 @@
 
     table {
         width: 300px;
+        height: 300px;
         border-collapse: collapse;
     }
     tr.linha1 {
@@ -26,7 +27,14 @@
     td {
         border: 1px solid black;
         padding: 5px;
+        text-align: center; /* alinhamento horizontal*/
+        vertical-align: middle; /*alinhamento vertical*/
     }
+    .numero {
+        text-align: right;
+        background-color: rgba(255, 0, 0, 0.541);
+    }
+
 </style>
 
 </head>
@@ -44,7 +52,7 @@
         </tr>
         <tr>
             <td>A2</td>
-            <td>B2</td>
+            <td class="numero">B2</td>
             <td>C2</td>
         </tr>
         <tr>
