--- a/Aulas-modulo3/ex003/index.html
+++ b/Aulas-modulo3/ex003/index.html
@@ -12,10 +12,11 @@
 
 
     <table>
+        <caption>Tabela das Unidades Federetivas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style=width:80px;>População</th>
             </tr>
         </thead>
             
@@ -36,7 +37,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="numero"><strong>165 958 440</strong></td>
             </tr>
 
