--- a/Aulas-modulo4/ex01/index.html
+++ b/Aulas-modulo4/ex01/index.html
@@ -11,11 +11,20 @@
 <body>
     <h1>Testando o uso de iframe</h1>
     <p>Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+            <a href="https://cursoemvideo.com" target="_blank">Site do Curso em Vídeo</a>
+        </iframe>
         para apender a programar.
     </p>
 
     <p>Alguns sites tem proteção para não aparecer no iframe.</p>
+    <h1>Testando o uso de iframe</h1>
+    <p>Acessando o site do 
+        <iframe src="" frameborder="0">
+            <a href="https://cursoemvideo.com" target="_blank">Site do Curso em Vídeo</a>
+        </iframe>
+        para apender a programar.
+    </p>
     
 </body>
 </html>
